--- a/AB testing.ipynb
+++ b/AB testing.ipynb
@@ -4976,7 +4976,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 30,
    "id": "89933360",
    "metadata": {},
    "outputs": [
@@ -4995,7 +4995,7 @@
    "source": [
     "control_respondents=df[df['experiment']=='control']\n",
     "conversion_control=control_respondents['yes'].sum()+control_respondents['no'].sum()\n",
-    "total_respondents_control=len(control_respondent)\n",
+    "total_respondents_control=len(control_respondents)\n",
     "\n",
     "exposed_respondents=df[df['experiment']=='exposed']\n",
     "conversion_exposed=exposed_respondents['yes'].sum()+exposed_respondents['no'].sum()\n",
@@ -5013,7 +5013,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 31,
    "id": "a77d6197",
    "metadata": {},
    "outputs": [
@@ -5023,7 +5023,7 @@
        "0.14"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5054,7 +5054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 32,
    "id": "2d60954c",
    "metadata": {},
    "outputs": [
@@ -5098,7 +5098,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 33,
    "id": "51fdc898",
    "metadata": {},
    "outputs": [
@@ -5108,7 +5108,7 @@
        "8077"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5119,7 +5119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 34,
    "id": "e2b697fa",
    "metadata": {},
    "outputs": [],
@@ -5130,7 +5130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 35,
    "id": "281995d8",
    "metadata": {},
    "outputs": [
@@ -5174,17 +5174,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 38,
    "id": "a35c1bc6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df['respond_rate']=df['yes']+df['no']"
+    "df['respond_rate']=(df['yes']+df['no'])/len(df['auction_id'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 40,
    "id": "6198ed26",
    "metadata": {},
    "outputs": [],
@@ -5199,17 +5199,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 41,
    "id": "cc8d8743",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[-2.497441364692631, 0.012529159055431248]"
+       "[-2.4974413646926266, 0.012529159055431421]"
       ]
      },
-     "execution_count": 100,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -5220,7 +5220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 42,
    "id": "d7317499",
    "metadata": {},
    "outputs": [
@@ -5228,8 +5228,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "T-Statistic: -2.497441364692631\n",
-      "P-Value: 0.012529159055431248\n"
+      "T-Statistic: -2.4974413646926266\n",
+      "P-Value: 0.012529159055431421\n"
      ]
     }
    ],
@@ -5240,7 +5240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 43,
    "id": "85019861",
    "metadata": {},
    "outputs": [
@@ -5250,7 +5250,7 @@
        "True"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
